# pytcs-tecnoalarm

./: .env.example  .gitignore  Dockerfile  DockerfileMqtt  README.md  api_models.py  login.py  prome.py  pyproject.toml  tcsession.py
.github/ISSUE_TEMPLATE/: others.md
.github/workflows/: python-app.yml  python-publish.yml  release_to_pypi.yml
docker/: Dockerfile  README.md  docker-compose.yml
docker/mqtt/: .env.example  README.md  hamqttmodels.py  main.py  requirements.txt
docker/prometheus/: README.md  main.py  requirements.txt
pytcs_tecnoalarm/: __init__.py  tcsession.py
